# RLCA

./: CMakeLists.txt  README.md  base.c  base.h  bitmap.c  bitmap.h  brk.c  brk.h  build_Android.sh  drmain.c  error.h  memtrace.c  memtrace.h  mmap.c  mmap.h  parsemap.c  parsemap.h  randutil.h  threadlocal.c  threadlocal.h  types.h  utils.c  utils.h  wrapper.h
ptrace/: ptracemain.c  ptraceutil.c  ptraceutil.h
testcase/: exploit.py
testcase/result/: 12_raw_html.txt  12_rio_free_html.txt  12_rio_warning_html.txt  16_raw_html.txt  16_rio_free_html.txt  16_rio_warning_html.txt  1_raw_html.txt  1_rio_free_html.txt  1_rio_warning_html.txt  4_raw_html.txt  4_rio_free_html.txt  4_rio_warning_html.txt  6_raw_html.txt  6_rio_free_html.txt  6_rio_warning_html.txt  8_raw_html.txt  8_rio_free_html.txt  8_rio_warning_html.txt  calc.py  plot_brkmem.py  plot_brktime.py  plot_mem.py  plot_req.py
